objects/ACP_Analytics__c.object
<CustomObject>
    <fields>
        <fullName>ACP_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACP_Analytics_Page__c</fullName>
        <label>Analytics Page</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD&amp;M</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Devices</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>DND</fullName>
                    <isActive>false</isActive>
                    <label>DND</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Report_1_Id__c</fullName>
        <label>Report 1 Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Report_1__c</fullName>
        <label>Report 1 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Report_2_Id__c</fullName>
        <label>Report 2 Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Report_2__c</fullName>
        <label>Report 2 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Report_3_Id__c</fullName>
        <label>Report 3 Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Report_3__c</fullName>
        <label>Report 3 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Type__c</fullName>
        <description>Hari 7/20/17 - Added for Account Plan.</description>
        <label>Account Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>GAM Account</fullName>
                </value>
                <value>
                    <fullName>KAM Account</fullName>
                </value>
                <value>
                    <fullName>Sold-to Account</fullName>
                </value>
                <value>
                    <fullName>WW Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Analytics</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ACP_Business_Unit__c</columns>
        <columns>ACP_Analytics_Page__c</columns>
        <columns>Account_Plan_Type__c</columns>
        <columns>ACP_Active__c</columns>
        <columns>ACP_Report_1__c</columns>
        <columns>ACP_Report_2__c</columns>
        <columns>ACP_Report_3__c</columns>
        <columns>ACP_Report_4__c</columns>
        <columns>ACP_Report_5__c</columns>
        <columns>ACP_Report_6__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AN-{0000}</displayFormat>
        <label>Analytics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>